# game.libretro.flycast

./: .travis.yml  CMakeLists.txt  Jenkinsfile  README.md  appveyor.yml
.github/workflows/: sync-addon-metadata-translations.yml
debian/: changelog.in  control  copyright
depends/common/flycast/: 0001-Fix-debug-build.patch  CMakeLists.txt  flycast.txt
depends/common/reicast/: CMakeLists.txt  reicast.txt
game.libretro.flycast/: addon.xml.in
game.libretro.flycast/resources/: settings.xml
game.libretro.flycast/resources/language/resource.language.af_za/: strings.po
game.libretro.flycast/resources/language/resource.language.am_et/: strings.po
game.libretro.flycast/resources/language/resource.language.ar_dz/: strings.po
game.libretro.flycast/resources/language/resource.language.ar_sa/: strings.po
game.libretro.flycast/resources/language/resource.language.ast_es/: strings.po
game.libretro.flycast/resources/language/resource.language.az_az/: strings.po
game.libretro.flycast/resources/language/resource.language.be_by/: strings.po
game.libretro.flycast/resources/language/resource.language.bg_bg/: strings.po
game.libretro.flycast/resources/language/resource.language.bs_ba/: strings.po
game.libretro.flycast/resources/language/resource.language.ca_es/: strings.po
game.libretro.flycast/resources/language/resource.language.cs_cz/: strings.po
game.libretro.flycast/resources/language/resource.language.cy_gb/: strings.po
game.libretro.flycast/resources/language/resource.language.da_dk/: strings.po
game.libretro.flycast/resources/language/resource.language.de_de/: strings.po
game.libretro.flycast/resources/language/resource.language.el_gr/: strings.po
game.libretro.flycast/resources/language/resource.language.en_GB/: strings.po
game.libretro.flycast/resources/language/resource.language.en_au/: strings.po
game.libretro.flycast/resources/language/resource.language.en_gb/: strings.po
game.libretro.flycast/resources/language/resource.language.en_nz/: strings.po
game.libretro.flycast/resources/language/resource.language.en_us/: strings.po
game.libretro.flycast/resources/language/resource.language.eo/: strings.po
game.libretro.flycast/resources/language/resource.language.es_ar/: strings.po
game.libretro.flycast/resources/language/resource.language.es_es/: strings.po
game.libretro.flycast/resources/language/resource.language.es_mx/: strings.po
game.libretro.flycast/resources/language/resource.language.et_ee/: strings.po
game.libretro.flycast/resources/language/resource.language.eu_es/: strings.po
game.libretro.flycast/resources/language/resource.language.fa_AF/: strings.po
game.libretro.flycast/resources/language/resource.language.fa_af/: strings.po
game.libretro.flycast/resources/language/resource.language.fa_ir/: strings.po
game.libretro.flycast/resources/language/resource.language.fi_fi/: strings.po
game.libretro.flycast/resources/language/resource.language.fil/: strings.po
game.libretro.flycast/resources/language/resource.language.fo_fo/: strings.po
game.libretro.flycast/resources/language/resource.language.fr_ca/: strings.po
game.libretro.reicast/: addon.xml  addon.xml.in
game.libretro.reicast/resources/: buttonmap.xml  settings.xml
(+60 files in other folders)
